syntax = "proto3";

package stwartchain.core;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "stwartchain/core/params.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/stalwart-algoritmiclab/stwart-chain-go/x/core/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  
  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams (MsgUpdateParams) returns (MsgUpdateParamsResponse);
  rpc Issue        (MsgIssue       ) returns (MsgIssueResponse       );
  rpc Withdraw     (MsgWithdraw    ) returns (MsgWithdrawResponse    );
  rpc Send         (MsgSend        ) returns (MsgSendResponse        );
}
// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) =                     "authority";
  option           (amino.name) = "stwart/x/core/MsgUpdateParams";
  
  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.
  
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

message MsgIssue {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string amount  = 2;
  string denom   = 3;
  string address = 4;
}

message MsgIssueResponse {}

message MsgWithdraw {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string amount  = 2;
  string denom   = 3;
  string address = 4;
}

message MsgWithdrawResponse {}

message MsgSend {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string from    = 2;
  string to      = 3;
  string amount  = 4;
  string denom   = 5;
}

message MsgSendResponse {}

message MsgBurn {
  string creator = 1;
  uint64 amount  = 2;
  string denom   = 3;
  string address = 4;
}